--- a/package.json
+++ b/package.json
@@ -7,14 +7,21 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
+    "start": "node server.mjs",
+    "dev:all": "concurrently \"npm run dev\" \"npm run start\""
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
+    "string-similarity": "^4.0.4",
+    "svelte": "^4.2.12"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.4",
-    "svelte": "^5.28.1",
-    "svelte-check": "^4.1.6",
-    "typescript": "~5.8.3",
-    "vite": "^6.3.5"
+    "concurrently": "^8.2.2",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0"
   }
 }
