--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "node server.mjs",
-    "dev:all": "concurrently \"npm run dev\" \"npm run start\""
+    "dev:all": "concurrently \"npm run dev\" \"npm run start\"",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -18,10 +19,15 @@
     "svelte": "^4.2.12"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "@tsconfig/svelte": "^5.0.4",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tsconfig/svelte": "^5.0.2",
+    "@types/node": "^20.10.5",
     "concurrently": "^8.2.2",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "gh-pages": "^6.1.1",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
+    "tslib": "^2.4.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.0.3"
   }
 }
