--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "node server.mjs",
-    "dev:all": "concurrently \"npm run dev\" \"npm run start\"",
-    "deploy": "gh-pages -d dist"
+    "dev:all": "concurrently \"npm run dev\" \"npm run start\""
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -23,7 +22,6 @@
     "@tsconfig/svelte": "^5.0.2",
     "@types/node": "^20.10.5",
     "concurrently": "^8.2.2",
-    "gh-pages": "^6.1.1",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
